# ApiFlowAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/api_docs/: sample_user_api.json
data/test_plans/: sample_user_api_plan.json
docs/: architecture.md  changelog.md  project-status.md  spec.md
docs/plans/: 2026-01-16-apiflowagent-design.md
src/: __init__.py  cli.py
src/ai/: __init__.py  client.py  generator.py  parser.py
src/executor/: __init__.py  assertion.py  http_client.py  runner.py  variable.py
src/reporter/: __init__.py  allure_adapter.py
